# nheqminer

./: .gitignore  CMakeLists.txt  README.md
automine/: ReadMe.txt  automine.cpp  automine.vcxproj  automine.vcxproj.filters  main.cpp  packages.config  stdafx.cpp
blake2/: blake2.vcxproj
cpu_tromp/: cpu_tromp.vcxproj  cpu_tromp.vcxproj.filters  cpu_tromp_sse.vcxproj  equi.h  equi_miner.h  equi_miner2.h
cpu_xenoncat/: cpu_xenoncat.vcxproj
cuda_djezo/: cuda_djezo.cpp  cuda_djezo.hpp  cuda_djezo.vcxproj  eqcuda.hpp  equi_miner.cu
cuda_tromp/: cuda_tromp.cpp  cuda_tromp.hpp  cuda_tromp.vcxproj  equi_miner.cu
nheqminer/: AvailableSolvers.h  MinerFactory.cpp  goldminer.vcxproj  main.cpp  nheqminer.sln  nheqminer.vcxproj  nheqminer.vcxproj.filters  packages.config  version.h
nheqminer/libstratum/: ZcashStratum.cpp
ocl_device_utils/: ocl_device_utils.vcxproj
ocl_silentarmy/: ocl_silentarmy.vcxproj
ocl_xpm/: ocl_xpm.vcxproj
pthreads/: pthread.vcxproj  pthread.vcxproj.filters  version.rc
screensaver/: auto_gen.sh  configure  configure.in
screensaver-new/: ScreenSaver.cpp  ScreenSaver.vcxproj
screensaver/OSX/: aclocal.m4  auto_gen.sh  compile.sh  config.guess.lnk  configure  configure.in  mw_screensaver_osx.cpp  mw_screensaver_osx.h  mw_screensaver_osx_view.h  mw_screensaver_osx_view.mm
screensaver/OSX/English.lproj/ConfigureSheet.nib/: classes.nib  info.nib  objects.nib
screensaver/OSX/mw_screensaver_osx.pbproj/: metawrap.pbxuser  project.pbxproj
screensaver/linux/: AUTHORS  Doxyfile  INSTALL  License  NEWS  auto_gen.sh  configure  configure.in  make.txt  mw_screensaver_linux.1  mw_screensaver_linux.cpp  mw_screensaver_linux.desktop  mw_screensaver_linux.h  mw_screensaver_linux.xml  mw_screensaver_linux_config.h  mw_screensaver_linux_config.h.in  mw_screensaver_linux_x11driver.cpp  mw_screensaver_linux_x11driver.h
screensaver/windows/: auto_gen.sh  config.sub.lnk  configure  configure.in  ltmain.sh.lnk  manifest.txt  mw_screensaver_windows.bpf  mw_screensaver_windows.bpr  mw_screensaver_windows.cpp  mw_screensaver_windows.dsp  mw_screensaver_windows.dsw  mw_screensaver_windows.rc  mw_screensaver_windows.sln  mw_screensaver_windows.vcxproj  mw_screensaver_windows.vcxproj.filters
