#################################################################################
#
#        FILE: @file configure.ac
#
#        $Id: configure.in,v 1.9 2006/09/19 15:59:42 james Exp $
#
#        @author     James Mc Parlane
#
#        PROJECT:    Metawrap Server
#
#        COMPONENT:
#
#        @date       11 September 2001
#
#        COMMENTS:
#
#        MODIFIED:
#
#
#        GENERAL INFO:
#
#                Massive Technologies 2000
#                PO Box 567, Darlinghurst
#                NSW, Australia
#                email:  info@massive.com.au
#                tel:    (+61-2) 9331 8699
#                fax:    (+61-2) 9331 8699
#
#
#        LICENSE:
#
#        Copyright (C) 2001  Massive Technologies, Pty Ltd.
#
#        This program is free software; you can redistribute it and/or modify
#        it under the terms of the GNU General Public License as published by
#        the Free Software Foundation; either version 2 of the License, or
#        (at your option) any later version.
#
#        This program is distributed in the hope that it will be useful,
#        but WITHOUT ANY WARRANTY; without even the implied warranty of
#        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#        GNU General Public License for more details.
#
#        You should have received a copy of the GNU General Public License
#        along with this program; if not, write to the Free Software
#        Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
#        $Log: configure.in,v $
#        Revision 1.9  2006/09/19 15:59:42  james
#        Getting CNI GPS to work under Linux
#
#        Revision 1.8  2005/04/26 10:57:23  james
#        Creating global config file to define compiler to be used..
#
#        Revision 1.7  2005/04/21 12:42:44  james
#        *** empty log message ***
#
#        Revision 1.6  2005/04/21 12:34:32  metawrap
#        *** empty log message ***
#
#        Revision 1.5  2005/04/21 12:24:34  james
#        Absorbing configure.in for linux screensaver
#
#        Revision 1.4  2005/04/21 12:17:01  metawrap
#        Getting linux screen saver to compile
#
#        Revision 1.3  2005/04/21 12:06:12  james
#        Edited to compile locally
#
#        Revision 1.2  2005/04/21 11:56:21  metawrap
#        prototype make file
#
#        Revision 1.3  2005/03/31 02:50:05  james
#        Fixing build script
#
#        Revision 1.2  2005/03/24 01:21:13  metawrap
#        Latest tweaks to get mw_screensaver_linux compiling
#
#        Revision 1.1  2005/03/23 07:27:34  james
#        Added utility for converting between text delimited files and XML
#
#################################################################################

dnl Process this file with autoconf to produce a configure script.
AC_INIT(mw_screensaver_linux.h)
AC_CONFIG_HEADERS([mw_screensaver_linux_config.h])

dnl Determine the build, host, and target system types.
AC_CANONICAL_SYSTEM

dnl Initialize automake.
AM_INIT_AUTOMAKE(metawrap_utils_mw_screensaver_linux, 0.0.1)
AM_MAINTAINER_MODE

dnl Choose C and C++ Compiler
m4_include([../../../metawrap_cc.m4])

# configure our subdirectories
#AC_CONFIG_SUBDIRS("plugin-manager")

CXXFLAGS="-I../../../generic_crt/ -I../../../vm/ -I../../../client/include/ -I../../../shell/ -I../../../server/include/ -I../../../server/amphibian/ $CXXFLAGS"

# check for ranlib
AC_PROG_RANLIB

# check for autoheader
##AC_CHECK_TOOL(AUTOHEADER,autoheader)

# check for libtool - we want to be able to create shared libs
AC_PROG_LIBTOOL

# make sure we have make
AC_PROG_MAKE_SET

################################################################
#
#

m4_include([../../../metawrap_libgl.m4])

AC_ARG_WITH(configdir, [  --with-configdir        Where is xscreensaver stashing its screensaver configs?])

if test "$with_configdir" != "" ; then
	AC_SUBST(configdir, $with_configdir)
	INSTALL_XSCREENSAVER_CONFIG_FILES=yes
else 
	which_xscreensaverdemo=`which xscreensaver-demo`
	if test -x "$which_xscreensaverdemo" ; then
		with_configdir=`strings $which_xscreensaverdemo | grep "\/config"`

		if test -d "$with_configdir" ; then
			AC_SUBST(configdir, $with_configdir)
			INSTALL_XSCREENSAVER_CONFIG_FILES=yes
		fi
	fi
fi

AM_CONDITIONAL(INSTALL_XSCREENSAVER_CONFIG_FILES, test "$INSTALL_XSCREENSAVER_CONFIG_FILES" == "yes")

AC_ARG_WITH(kdessconfigdir, [  --with-kdessconfigdir   Where is KDE stashing its screensaver configs?])

if test "$with_kdessconfigdir" != "" ; then
	AC_SUBST(kdessconfigdir, $with_kdessconfigdir)
	INSTALL_KDE_CONFIG_FILES=yes
else 
	with_kdessconfigdir=/usr/share/applnk/System/ScreenSavers

	if test -d "$with_kdessconfigdir" ; then
		AC_SUBST(kdessconfigdir, $with_kdessconfigdir)
		INSTALL_KDE_CONFIG_FILES=yes
	fi
fi

AM_CONDITIONAL(INSTALL_KDE_CONFIG_FILES, test "$INSTALL_KDE_CONFIG_FILES" == "yes")


if test -d sounds ; then
	AC_ARG_ENABLE(sound, [  --disable-sound         Don't compile with sound.])
else
	echo "Audio samples not found, disabling sound.";
	enable_sound=no
fi


#
#
################################################################



m4_include([../../../metawrap_app.m4])

# Checks for required libraries.

m4_include([../../../metawrap_libgmp.m4])

m4_include([../../../metawrap_libgl.m4])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile])

